--- a/css/inputMobile.css
+++ b/css/inputMobile.css
@@ -281,3 +281,272 @@
 .faNum {
   font-family: "IRANSansWeb300";
 }
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+  width: 2px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
+
+.activeBrandFilter h2 {
+  color: black;
+}
+.activeBrandFilter h2::after {
+  transform: scaleX(1);
+}
+
+.brandBox {
+  opacity: 0;
+  transform: translateY(20vh);
+}
+
+.homePage .section1 .swiper-slide-active {
+  z-index: 3;
+}
+
+.homePage .section1 .cta {
+  padding: 12% 0;
+}
+.homePage .section1 .cta__slider-wrapper {
+  position: relative;
+  width: 100%;
+  float: left;
+  height: 100vh;
+}
+.homePage .section1 .cta__slider-wrapper .block {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+}
+.homePage .section1 .cta__slider {
+  min-height: 50vh;
+}
+.homePage .section1 .cta__slider .swiper-slide {
+  overflow: hidden;
+}
+.homePage .section1 .cta__slider-arrows {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+.homePage .section1 .cta__slider-arrow {
+  position: absolute;
+  top: 0;
+  width: 50%;
+  height: 100%;
+}
+.homePage .section1 .cta__slider-arrow.cta__slider-arrow--previous {
+  left: 0;
+}
+.homePage .section1 .cta__slider-arrow.cta__slider-arrow--next {
+  left: 50%;
+}
+.homePage .section1 .cta__slider-item {
+  position: relative;
+}
+.homePage .section1 .cta__slider-item .media-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+.homePage .section1 .cta__slider-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.homePage .section1 .cta__slider-counter {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  padding: 20px 40px;
+  color: #ffffff;
+}
+.homePage .section1 .cta__cta {
+  padding-top: 12%;
+  max-width: 480px;
+}
+
+.homePage .section1 .progressCat .swiper-scrollbar-drag {
+  background-color: white;
+}
+.homePage .section1 .progressCat {
+  width: 108px;
+  height: 2px;
+  background-color: #ffffff80;
+}
+.homePage .section1 .pagination1 .current {
+  font-family: "IRANSansWeb400";
+  font-size: 25px;
+  line-height: 39.13px;
+  text-align: left;
+  color: white;
+}
+.homePage .section1 .pagination1 .total {
+  font-family: "IRANSansWeb300";
+  font-size: 14px;
+  line-height: 21.13px;
+  text-align: left;
+  color: white;
+}
+.homePage .section1 .pagination1 i {
+  font-family: "IRANSansWeb500";
+  font-size: 16px;
+  margin: 0 5px;
+  line-height: 21.91px;
+  display: inline-block;
+  text-align: left;
+  color: white;
+}
+.homePage .section1 .swiper-button-disabled {
+  opacity: 0.5;
+}
+
+.play-popup-container:hover .play-popup-btn svg path {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  animation: dash 1.5s ease-in-out forwards;
+}
+
+@keyframes dash {
+  0% {
+    stroke-dashoffset: 1000;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
+.popOpen {
+  transform: translateY(0) !important;
+}
+
+.popSliderFraction .current,
+.popSliderFraction i {
+  font-family: "IRANSansWeb400";
+  font-size: 20px;
+  line-height: 31.3px;
+  color: #febe1b;
+}
+.popSliderFraction i {
+  margin: 0 5px;
+}
+.popSliderFraction span {
+  font-family: "IRANSansWeb400";
+  font-size: 15px;
+  color: #febe1b;
+}
+
+.awardsSliderpagination .swiper-pagination-bullet {
+  width: 9px;
+  height: 9px;
+  opacity: 1;
+  background-color: #828282;
+  transition: 0.3s ease;
+}
+.awardsSliderpagination .swiper-pagination-bullet-active {
+  width: 13px;
+  height: 13px;
+  background-color: black;
+}
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar {
+  width: 2px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
+.SearchBox-popup  input{
+  box-shadow: 0px 4px 4px 0px #C2C2C240;
+}
+.SearchBox-popup{
+  background-color:    rgba(169, 169, 169, 0.14) ;
+}
+@keyframes rotateAndFade {
+  0% {
+    transform: rotate(360deg);
+    border-color: rgb(0, 0, 0); /* Final border color */
+  }
+  100% {
+    transform: rotate(0deg);
+    border-color: white; /* Final border color */
+  }
+}
+.ShowMore:hover .circle{
+  animation: rotateAndFade 1s forwards;
+}
+.About-container .line.line-1 {
+background: linear-gradient(90deg, #FEBE1B 51%, #000000 100%);
+
+}
+.About-container .line.line-2 {
+background: linear-gradient(90deg, #000000 0%, #FEBE1B 100%);
+}
+main.Etelaei-C .section p,main.Etelaei-C .section h1,
+main.Etelaei-C .section h2,
+.aboutUs-C .Text p{
+transform: translateY(100%);
+-webkit-transform: translateY(100%);
+-moz-transform: translateY(100%);
+-ms-transform: translateY(100%);
+-o-transform: translateY(100%);
+transition: all 700ms;
+-webkit-transition: all 700ms;
+-moz-transition: all 700ms;
+-ms-transition: all 700ms;
+-o-transition: all 700ms;
+}
+.EtalaeiItem img{
+filter: grayscale(1);
+-webkit-filter: grayscale(1);
+transition: all .5s ease;
+-webkit-transition: all .5s ease;
+-moz-transition: all .5s ease;
+-ms-transition: all .5s ease;
+-o-transition: all .5s ease;
+}
+.EtalaeiItem:hover img{
+filter: grayscale(0);
+-webkit-filter: grayscale(0);
+}
+
+
+
+.pause {
+    opacity: 1;
+  }
+  
+  .play {
+    opacity: 0;
+    display: none;
+  }
+  
