--- a/css/outputMobile.css
+++ b/css/outputMobile.css
@@ -665,6 +665,10 @@ video {
   bottom: 2.5rem;
 }
 
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
 .bottom-8 {
   bottom: 2rem;
 }
@@ -677,28 +681,16 @@ video {
   left: 0px;
 }
 
-.left-\[10\%\] {
-  left: 10%;
-}
-
-.left-\[5\%\] {
-  left: 5%;
-}
-
 .right-0 {
   right: 0px;
 }
 
-.right-\[5\%\] {
-  right: 5%;
+.top-12 {
+  top: 3rem;
 }
 
 .top-16 {
   top: 4rem;
-}
-
-.top-\[50\%\] {
-  top: 50%;
 }
 
 .top-\[70\%\] {
@@ -770,6 +762,11 @@ video {
   margin-right: auto;
 }
 
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
 .my-32 {
   margin-top: 8rem;
   margin-bottom: 8rem;
@@ -784,6 +781,10 @@ video {
   margin-right: -4rem;
 }
 
+.mb-11 {
+  margin-bottom: 2.75rem;
+}
+
 .mb-12 {
   margin-bottom: 3rem;
 }
@@ -792,12 +793,24 @@ video {
   margin-bottom: 5rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
 .mb-6 {
   margin-bottom: 1.5rem;
 }
 
 .mb-8 {
   margin-bottom: 2rem;
+}
+
+.mt-11 {
+  margin-top: 2.75rem;
 }
 
 .mt-2 {
@@ -818,6 +831,18 @@ video {
 
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mb-2\.5 {
+  margin-bottom: 0.625rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .box-border {
@@ -923,10 +948,6 @@ video {
   aspect-ratio: 1 / 1;
 }
 
-.h-\[126px\] {
-  height: 126px;
-}
-
 .h-\[20px\] {
   height: 20px;
 }
@@ -935,8 +956,12 @@ video {
   height: 30px;
 }
 
-.h-\[50px\] {
-  height: 50px;
+.h-\[42px\] {
+  height: 42px;
+}
+
+.h-\[55px\] {
+  height: 55px;
 }
 
 .h-\[5px\] {
@@ -955,28 +980,16 @@ video {
   width: 90%;
 }
 
-.w-\[126px\] {
-  width: 126px;
-}
-
-.w-\[205px\] {
-  width: 205px;
+.w-\[183px\] {
+  width: 183px;
 }
 
 .w-\[20px\] {
   width: 20px;
 }
 
-.w-\[45\%\] {
-  width: 45%;
-}
-
-.w-\[47\%\] {
-  width: 47%;
-}
-
-.w-\[55\%\] {
-  width: 55%;
+.w-\[55px\] {
+  width: 55px;
 }
 
 .w-\[5px\] {
@@ -2015,6 +2028,11 @@ video {
   border-style: none;
 }
 
+.border-darkBlue {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 43 67 / var(--tw-border-opacity));
+}
+
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
@@ -2025,9 +2043,18 @@ video {
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-darkBlue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 43 67 / var(--tw-bg-opacity));
+}
+
 .bg-gray-bg {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+
+.bg-light-gray {
+  background-color: #F2F2F2BD;
 }
 
 .bg-light-gray\/\[0\.5\] {
@@ -2052,10 +2079,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-light-gray {
-  background-color: #F2F2F2BD;
 }
 
 .bg-gradient-to-l {
@@ -2204,6 +2227,11 @@ video {
   padding-right: 0.375rem;
 }
 
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
@@ -2219,9 +2247,19 @@ video {
   padding-right: 1.25rem;
 }
 
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .px-\[5\%\] {
   padding-left: 5%;
   padding-right: 5%;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-2\.5 {
@@ -2239,33 +2277,25 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.pb-\[133px\] {
-  padding-bottom: 133px;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pl-24 {
   padding-left: 6rem;
 }
 
-.pl-\[5\%\] {
-  padding-left: 5%;
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
+.pr-2\.5 {
+  padding-right: 0.625rem;
 }
 
 .pr-4 {
   padding-right: 1rem;
-}
-
-.pr-\[5\%\] {
-  padding-right: 5%;
-}
-
-.pt-\[122px\] {
-  padding-top: 122px;
 }
 
 .text-left {
@@ -2355,6 +2385,15 @@ video {
 
 .text-\[85px\] {
   font-size: 85px;
+}
+
+.text-\[8px\] {
+  font-size: 8px;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-lg {
@@ -2467,6 +2506,11 @@ video {
 }
 
 .text-dark-blue {
+  --tw-text-opacity: 1;
+  color: rgb(0 43 67 / var(--tw-text-opacity));
+}
+
+.text-darkBlue {
   --tw-text-opacity: 1;
   color: rgb(0 43 67 / var(--tw-text-opacity));
 }
@@ -3639,14 +3683,14 @@ main.Etelaei-C .section h2,
   height: 1px;
 }
 
+.before\:w-\[20px\]::before {
+  content: var(--tw-content);
+  width: 20px;
+}
+
 .before\:w-\[2px\]::before {
   content: var(--tw-content);
   width: 2px;
-}
-
-.before\:w-\[71px\]::before {
-  content: var(--tw-content);
-  width: 71px;
 }
 
 .before\:origin-left::before {
@@ -3691,9 +3735,9 @@ main.Etelaei-C .section h2,
   display: inline-block;
 }
 
-.after\:h-\[5px\]::after {
+.after\:h-\[3px\]::after {
   content: var(--tw-content);
-  height: 5px;
+  height: 3px;
 }
 
 .after\:h-px::after {
@@ -3701,14 +3745,14 @@ main.Etelaei-C .section h2,
   height: 1px;
 }
 
-.after\:w-\[5px\]::after {
+.after\:w-\[20px\]::after {
   content: var(--tw-content);
-  width: 5px;
+  width: 20px;
 }
 
-.after\:w-\[71px\]::after {
+.after\:w-\[3px\]::after {
   content: var(--tw-content);
-  width: 71px;
+  width: 3px;
 }
 
 .after\:origin-right::after {
@@ -3764,30 +3808,8 @@ main.Etelaei-C .section h2,
   text-align: center;
 }
 
-.group:hover .group-hover\:-translate-x-\[20px\] {
-  --tw-translate-x: -20px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.group:hover .group-hover\:translate-x-\[20px\] {
-  --tw-translate-x: 20px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
-}
-
-.group:hover .group-hover\:before\:scale-x-125::before {
-  content: var(--tw-content);
-  --tw-scale-x: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.group:hover .group-hover\:after\:scale-x-\[1\.2\]::after {
-  content: var(--tw-content);
-  --tw-scale-x: 1.2;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @media (min-width: 480px) {
