complete header, footer,about page

--- a/css/outputMobile.css
+++ b/css/outputMobile.css
@@ -669,12 +669,24 @@ video {
   bottom: 2rem;
 }
 
+.bottom-\[0\] {
+  bottom: 0;
+}
+
 .end-1 {
   inset-inline-end: 0.25rem;
 }
 
 .left-0 {
   left: 0px;
+}
+
+.left-\[\.5em\] {
+  left: .5em;
+}
+
+.left-\[0\] {
+  left: 0;
 }
 
 .left-\[10\%\] {
@@ -693,12 +705,28 @@ video {
   right: 5%;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .top-16 {
   top: 4rem;
 }
 
+.top-\[\.5em\] {
+  top: .5em;
+}
+
+.top-\[\.8em\] {
+  top: .8em;
+}
+
 .top-\[50\%\] {
   top: 50%;
+}
+
+.top-\[5em\] {
+  top: 5em;
 }
 
 .top-\[70\%\] {
@@ -719,6 +747,18 @@ video {
 
 .z-2 {
   z-index: 2;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
+.z-\[-1\] {
+  z-index: -1;
+}
+
+.z-\[99\] {
+  z-index: 99;
 }
 
 .float-start {
@@ -780,6 +820,26 @@ video {
   margin-bottom: 1rem;
 }
 
+.my-\[1\.5em\] {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+}
+
+.my-\[2em\] {
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.my-\[1em\] {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
 .-mr-16 {
   margin-right: -4rem;
 }
@@ -800,6 +860,22 @@ video {
   margin-bottom: 2rem;
 }
 
+.ml-\[10\%\] {
+  margin-left: 10%;
+}
+
+.mr-\[\.5em\] {
+  margin-right: .5em;
+}
+
+.mr-\[10\%\] {
+  margin-right: 10%;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -818,6 +894,14 @@ video {
 
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.mt-\[2em\] {
+  margin-top: 2em;
+}
+
+.mt-\[1em\] {
+  margin-top: 1em;
 }
 
 .box-border {
@@ -923,20 +1007,52 @@ video {
   aspect-ratio: 1 / 1;
 }
 
+.h-0 {
+  height: 0px;
+}
+
+.h-\[100vh\] {
+  height: 100vh;
+}
+
 .h-\[126px\] {
   height: 126px;
+}
+
+.h-\[1px\] {
+  height: 1px;
 }
 
 .h-\[20px\] {
   height: 20px;
 }
 
+.h-\[2px\] {
+  height: 2px;
+}
+
 .h-\[30px\] {
   height: 30px;
 }
 
+.h-\[40px\] {
+  height: 40px;
+}
+
 .h-\[50px\] {
   height: 50px;
+}
+
+.h-\[50vh\] {
+  height: 50vh;
+}
+
+.h-\[55px\] {
+  height: 55px;
+}
+
+.h-\[56px\] {
+  height: 56px;
 }
 
 .h-\[5px\] {
@@ -947,16 +1063,36 @@ video {
   height: 100%;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
 .h-svh {
   height: 100svh;
+}
+
+.min-h-\[50px\] {
+  min-height: 50px;
+}
+
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-90p {
   width: 90%;
 }
 
+.w-\[100vw\] {
+  width: 100vw;
+}
+
 .w-\[126px\] {
   width: 126px;
+}
+
+.w-\[15px\] {
+  width: 15px;
 }
 
 .w-\[205px\] {
@@ -965,6 +1101,18 @@ video {
 
 .w-\[20px\] {
   width: 20px;
+}
+
+.w-\[21px\] {
+  width: 21px;
+}
+
+.w-\[22px\] {
+  width: 22px;
+}
+
+.w-\[2px\] {
+  width: 2px;
 }
 
 .w-\[45\%\] {
@@ -979,8 +1127,36 @@ video {
   width: 55%;
 }
 
+.w-\[55px\] {
+  width: 55px;
+}
+
+.w-\[56px\] {
+  width: 56px;
+}
+
+.w-\[57\%\] {
+  width: 57%;
+}
+
 .w-\[5px\] {
   width: 5px;
+}
+
+.w-\[8\%\] {
+  width: 8%;
+}
+
+.w-\[80\%\] {
+  width: 80%;
+}
+
+.w-\[90\%\] {
+  width: 90%;
+}
+
+.w-\[95\%\] {
+  width: 95%;
 }
 
 .w-\[this-is\\\\\] {
@@ -1006,6 +1182,15 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.w-\[70\%\] {
+  width: 70%;
 }
 
 .flex-shrink {
@@ -1053,8 +1238,18 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-y-\[-100vh\] {
+  --tw-translate-y: -100vh;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[100\%\] {
+  --tw-translate-y: 100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1361,6 +1556,14 @@ video {
   grid-auto-flow: column dense;
 }
 
+.grid-cols-\[50vw\2c 50vw\] {
+  grid-template-columns: 50vw 50vw;
+}
+
+.grid-rows-\[65vh\2c 2vh\2c 27vh\] {
+  grid-template-rows: 65vh 2vh 27vh;
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -1545,8 +1748,44 @@ video {
   justify-items: stretch;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-\[1\.5em\] {
+  gap: 1.5em;
+}
+
 .gap-\[10px\] {
   gap: 10px;
+}
+
+.gap-\[1em\] {
+  gap: 1em;
+}
+
+.gap-\[5px\] {
+  gap: 5px;
 }
 
 .gap-x-2 {
@@ -1875,8 +2114,16 @@ video {
   border-radius: 0.25rem;
 }
 
+.rounded-\[15px\] {
+  border-radius: 15px;
+}
+
 .rounded-\[28px\] {
   border-radius: 28px;
+}
+
+.rounded-\[50\%\] {
+  border-radius: 50%;
 }
 
 .rounded-full {
@@ -2015,9 +2262,42 @@ video {
   border-style: none;
 }
 
+.border-\[\#002c43af\] {
+  border-color: #002c43af;
+}
+
+.border-darkBlue {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 43 67 / var(--tw-border-opacity));
+}
+
+.border-gray2 {
+  --tw-border-opacity: 1;
+  border-color: rgb(169 169 169 / var(--tw-border-opacity));
+}
+
+.border-gray3 {
+  --tw-border-opacity: 1;
+  border-color: rgb(130 130 130 / var(--tw-border-opacity));
+}
+
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.\!bg-mainBlue {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(25 74 150 / var(--tw-bg-opacity)) !important;
+}
+
+.\!bg-white {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-\[\#0000004D\] {
+  background-color: #0000004D;
 }
 
 .bg-\[rgb\(255\2c 0\2c 0\)\] {
@@ -2025,9 +2305,23 @@ video {
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-darkBlue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 43 67 / var(--tw-bg-opacity));
+}
+
 .bg-gray-bg {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+
+.bg-gray3 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(130 130 130 / var(--tw-bg-opacity));
+}
+
+.bg-light-gray {
+  background-color: #F2F2F2BD;
 }
 
 .bg-light-gray\/\[0\.5\] {
@@ -2044,6 +2338,11 @@ video {
   background-color: rgb(25 74 150 / var(--tw-bg-opacity));
 }
 
+.bg-mainBlue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(25 74 150 / var(--tw-bg-opacity));
+}
+
 .bg-new-gray {
   --tw-bg-opacity: 1;
   background-color: rgb(242 242 242 / var(--tw-bg-opacity));
@@ -2052,10 +2351,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-light-gray {
-  background-color: #F2F2F2BD;
 }
 
 .bg-gradient-to-l {
@@ -2219,9 +2514,19 @@ video {
   padding-right: 1.25rem;
 }
 
+.px-\[1em\] {
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
 .px-\[5\%\] {
   padding-left: 5%;
   padding-right: 5%;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-2\.5 {
@@ -2239,13 +2544,36 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-\[\.5em\] {
+  padding-top: .5em;
+  padding-bottom: .5em;
+}
+
+.py-\[1\.5em\] {
+  padding-top: 1.5em;
+  padding-bottom: 1.5em;
+}
+
+.py-\[1em\] {
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.py-\[2em\] {
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
 
 .pb-\[133px\] {
   padding-bottom: 133px;
+}
+
+.pb-\[1em\] {
+  padding-bottom: 1em;
 }
 
 .pl-24 {
@@ -2266,6 +2594,10 @@ video {
 
 .pt-\[122px\] {
   padding-top: 122px;
+}
+
+.pt-\[1em\] {
+  padding-top: 1em;
 }
 
 .text-left {
@@ -2348,13 +2680,38 @@ video {
   font-family: IRANSansWeb500, IRANSansWeb500;
 }
 
+.font-IRANSansWeb700 {
+  font-family: IRANSansWeb700, IRANSansWeb700;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
 }
 
+.text-\[10px\] {
+  font-size: 10px;
+}
+
+.text-\[13px\] {
+  font-size: 13px;
+}
+
+.text-\[15px\] {
+  font-size: 15px;
+}
+
 .text-\[85px\] {
   font-size: 85px;
+}
+
+.text-\[8px\] {
+  font-size: 8px;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-lg {
@@ -2379,6 +2736,14 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-light {
+  font-weight: 300;
+}
+
+.font-medium {
+  font-weight: 500;
 }
 
 .font-normal {
@@ -2457,6 +2822,50 @@ video {
   line-height: 18.78px;
 }
 
+.leading-21 {
+  line-height: 21px;
+}
+
+.leading-21\.91 {
+  line-height: 21.91px;
+}
+
+.leading-23 {
+  line-height: 23px;
+}
+
+.leading-24 {
+  line-height: 24px;
+}
+
+.leading-25\.04 {
+  line-height: 25.04px;
+}
+
+.leading-\[15\.02px\] {
+  line-height: 15.02px;
+}
+
+.leading-\[15\.65px\] {
+  line-height: 15.65px;
+}
+
+.leading-\[19\.2px\] {
+  line-height: 19.2px;
+}
+
+.leading-\[20\.35px\] {
+  line-height: 20.35px;
+}
+
+.leading-\[21\.76px\] {
+  line-height: 21.76px;
+}
+
+.leading-\[23\.48px\] {
+  line-height: 23.48px;
+}
+
 .text-\[\#336699\]\/\[\.35\] {
   color: rgb(51 102 153 / .35);
 }
@@ -2469,6 +2878,21 @@ video {
 .text-dark-blue {
   --tw-text-opacity: 1;
   color: rgb(0 43 67 / var(--tw-text-opacity));
+}
+
+.text-darkBlue {
+  --tw-text-opacity: 1;
+  color: rgb(0 43 67 / var(--tw-text-opacity));
+}
+
+.text-gray2 {
+  --tw-text-opacity: 1;
+  color: rgb(169 169 169 / var(--tw-text-opacity));
+}
+
+.text-gray3 {
+  --tw-text-opacity: 1;
+  color: rgb(130 130 130 / var(--tw-text-opacity));
 }
 
 .text-main-blue {
@@ -2793,12 +3217,44 @@ video {
   transition-duration: 150ms;
 }
 
+.delay-100 {
+  transition-delay: 100ms;
+}
+
+.duration-100 {
+  transition-duration: 100ms;
+}
+
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
 }
 
 .duration-500 {
   transition-duration: 500ms;
+}
+
+.duration-700 {
+  transition-duration: 700ms;
+}
+
+.duration-75 {
+  transition-duration: 75ms;
+}
+
+.duration-\[\.4s\] {
+  transition-duration: .4s;
+}
+
+.duration-\[100\] {
+  transition-duration: 100;
 }
 
 .ease-in {
@@ -3574,6 +4030,10 @@ main.Etelaei-C .section h2,
   display: none;
 }
 
+.s{
+  color: #002c43af;
+}
+
 @media (min-width: 480px) {
   .sm\:container {
     width: 100%;
@@ -3604,6 +4064,40 @@ main.Etelaei-C .section h2,
   }
 }
 
+.placeholder\:font-IRANSansWeb400::-moz-placeholder {
+  font-family: IRANSansWeb400, IRANSansWeb400;
+}
+
+.placeholder\:font-IRANSansWeb400::placeholder {
+  font-family: IRANSansWeb400, IRANSansWeb400;
+}
+
+.placeholder\:font-normal::-moz-placeholder {
+  font-weight: 400;
+}
+
+.placeholder\:font-normal::placeholder {
+  font-weight: 400;
+}
+
+.placeholder\:leading-21\.91::-moz-placeholder {
+  line-height: 21.91px;
+}
+
+.placeholder\:leading-21\.91::placeholder {
+  line-height: 21.91px;
+}
+
+.placeholder\:text-gray2::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(169 169 169 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-gray2::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(169 169 169 / var(--tw-text-opacity));
+}
+
 .before\:absolute::before {
   content: var(--tw-content);
   position: absolute;
@@ -3619,6 +4113,11 @@ main.Etelaei-C .section h2,
   top: 0px;
 }
 
+.before\:z-\[-1\]::before {
+  content: var(--tw-content);
+  z-index: -1;
+}
+
 .before\:block::before {
   content: var(--tw-content);
   display: block;
@@ -3627,6 +4126,16 @@ main.Etelaei-C .section h2,
 .before\:inline-block::before {
   content: var(--tw-content);
   display: inline-block;
+}
+
+.before\:h-\[50px\]::before {
+  content: var(--tw-content);
+  height: 50px;
+}
+
+.before\:h-\[80px\]::before {
+  content: var(--tw-content);
+  height: 80px;
 }
 
 .before\:h-full::before {
@@ -3639,6 +4148,11 @@ main.Etelaei-C .section h2,
   height: 1px;
 }
 
+.before\:w-\[1px\]::before {
+  content: var(--tw-content);
+  width: 1px;
+}
+
 .before\:w-\[2px\]::before {
   content: var(--tw-content);
   width: 2px;
@@ -3649,12 +4163,45 @@ main.Etelaei-C .section h2,
   width: 71px;
 }
 
+.before\:w-\[80px\]::before {
+  content: var(--tw-content);
+  width: 80px;
+}
+
 .before\:origin-left::before {
   content: var(--tw-content);
   transform-origin: left;
 }
 
+.before\:translate-x-\[-\.3em\]::before {
+  content: var(--tw-content);
+  --tw-translate-x: -.3em;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.before\:translate-y-\[-100\%\]::before {
+  content: var(--tw-content);
+  --tw-translate-y: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.before\:rounded-full::before {
+  content: var(--tw-content);
+  border-radius: 9999px;
+}
+
+.before\:bg-\[\#A0A0A024\]::before {
+  content: var(--tw-content);
+  background-color: #A0A0A024;
+}
+
 .before\:bg-dark-blue::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 43 67 / var(--tw-bg-opacity));
+}
+
+.before\:bg-darkBlue::before {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
   background-color: rgb(0 43 67 / var(--tw-bg-opacity));
@@ -3669,6 +4216,11 @@ main.Etelaei-C .section h2,
 .before\:duration-300::before {
   content: var(--tw-content);
   transition-duration: 300ms;
+}
+
+.before\:content-\[\'\'\]::before {
+  --tw-content: '';
+  content: var(--tw-content);
 }
 
 .after\:absolute::after {
@@ -3732,6 +4284,10 @@ main.Etelaei-C .section h2,
   transition-duration: 300ms;
 }
 
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
+}
+
 .hover\:bg-dark-blue:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 43 67 / var(--tw-bg-opacity));
@@ -3739,6 +4295,11 @@ main.Etelaei-C .section h2,
 
 .hover\:font-bold:hover {
   font-weight: 700;
+}
+
+.hover\:text-pink:hover {
+  --tw-text-opacity: 1;
+  color: rgb(237 34 137 / var(--tw-text-opacity));
 }
 
 .hover\:text-white:hover {
@@ -3801,4 +4362,30 @@ main.Etelaei-C .section h2,
     paint-order: markers;
   }
 }
-  
+
+.\[\&\.OP\]\:grid.OP {
+  display: grid;
+}
+
+.\[\&\.OpenSearch\]\:translate-y-\[0\].OpenSearch {
+  --tw-translate-y: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.\[\&\.activeHeader\]\:bg-main-blue.activeHeader {
+  --tw-bg-opacity: 1;
+  background-color: rgb(25 74 150 / var(--tw-bg-opacity));
+}
+
+.\[\&\.goDown\]\:translate-y-\[-100\%\].goDown {
+  --tw-translate-y: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.\[\&\.hide\]\:pointer-events-none.hide {
+  pointer-events: none;
+}
+
+.\[\&\.hide\]\:opacity-0.hide {
+  opacity: 0;
+}
